[package]
name    = "wormhole-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "wormhole"

[dependencies]
anyhow = "1"
bstr = { version = "1", features = ["serde"] }
hex = "0.4.3"
hex-literal = "0.3.4"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_wormhole = "0.1.0"
sha3 = "0.10.4"
thiserror = "1.0.34"

[dev-dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
hex = "*"
